<resources>
    <string name="app_name">HumraProject</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="app_nameHead">Ek Investment</string>
    <string name="dis">By proceeding, I agree to ETMONEY\'s user declaration BFL\'s T and C</string>
    <string name="deposit_tenure">Deposit Tenure</string>
    <string name="max_yrs">min. 1yr,Max. 5yrs</string>
    <string name="duration">Enter in month</string>
    <string name="lbl_code">Code</string>
    <string name="lbl_continue">continue</string>
    <string name="lbl_angelina_lan">Angelina Lan</string>
    <string name="lbl_thu">Thu</string>
    <string name="lbl_kate_morgan">Kate Morgan</string>
    <string name="lbl_12_09">12.09</string>
    <string name="lbl_company_name">Company Name</string>
    <string name="lbl_expenses">Expenses</string>
    <string name="lbl_unpaid">Unpaid</string>
    <string name="lbl_01704889390">01704889390</string>
    <string name="lbl_user_name">User name</string>
    <string name="lbl_bdt">BDT</string>
    <string name="lbl_31_250">$ 31,250</string>
    <string name="lbl_app_navigation">App Navigation</string>
    <string name="lbl_to_acc_to_acc">To acc to acc</string>
    <string name="lbl_massage">Massage</string>
    <string name="lbl_cvv">CVV</string>
    <string name="lbl_mobile_prepaid2">Mobile Prepaid</string>
    <string name="lbl_50">$50</string>
    <string name="msg_enter_your_acco">Enter Your Account Password</string>
    <string name="msg_electricity_bil2">Electricity Bill</string>
    <string name="lbl_england">England</string>
    <string name="lbl_start_now">Start Now</string>
    <string name="lbl_address_here">Address Here</string>
    <string name="msg_enter_your_bill">Enter Your Billing Code</string>
    <string name="lbl_water_bill">Water
Bill</string>
    <string name="lbl_october">October</string>
    <string name="msg_bill_paid_succe">Bill Paid Successfully </string>
    <string name="lbl_suzane_jobs">Suzane Jobs</string>
    <string name="msg_sign_in_with_go">Sign in with Google</string>
    <string name="lbl_a">A</string>
    <string name="lbl_b">B</string>
    <string name="lbl_sun">Sun</string>
    <string name="lbl_angelina_druff">Angelina Druff</string>
    <string name="lbl_34_56">34.56</string>
    <string name="lbl_date">Date</string>
    <string name="lbl_money_receive">Money Receive</string>
    <string name="lbl_from">From</string>
    <string name="lbl_to">To</string>
    <string name="lbl_exchange_money">Exchange Money</string>
    <string name="lbl_last_name">Last Name</string>
    <string name="lbl_history">History</string>
    <string name="msg_we_help_our_use">We help our user to make the right fiance decisioin to make their money safe.</string>
    <string name="lbl_amount">Amount</string>
    <string name="lbl_expires">Expires</string>
    <string name="lbl_money_exchange2">Money Exchange</string>
    <string name="lbl_new_card">New Card</string>
    <string name="lbl_bank_to_bank">Bank To
Bank</string>
    <string name="lbl_480">$480</string>
    <string name="lbl_face_id">Face ID</string>
    <string name="lbl_welcome">Welcome!</string>
    <string name="msg_money_sent_succ2">Money Sent Success</string>
    <string name="lbl_money_exchange">Money
Exchange</string>
    <string name="msg_bank_to_bank_fo">Bank To bank#Four</string>
    <string name="msg_company_name_he">Company name here</string>
    <string name="msg_request_sent_su">Request Sent Successfully </string>
    <string name="lbl_pay_bills">Pay
Bills</string>
    <string name="lbl_if_card_active">If card active</string>
    <string name="lbl_card_number">Card Number</string>
    <string name="msg_check_your_app">"Check your app's UI from the below demo screens of your app."</string>
    <string name="lbl_105_00">$105.00</string>
    <string name="msg_recharge_done_s">Recharge Done Successfully </string>
    <string name="lbl_cards">Cards</string>
    <string name="lbl_30_00">+$30.00</string>
    <string name="lbl_password">Password</string>
    <string name="lbl_japan">Japan</string>
    <string name="lbl_payment_success">Payment Success</string>
    <string name="lbl_16_23_jan">16 \u2013 23 Jan</string>
    <string name="msg_select_bank_to">Select Bank To Send</string>
    <string name="msg_email_notificat">Email Notification</string>
    <string name="msg_online_digita">Online &amp; Digital Banking</string>
    <string name="lbl_cr">CR</string>
    <string name="msg_type_your_massa">Type Your Massage</string>
    <string name="lbl_per_day">per day</string>
    <string name="msg_ac_159_107_13">AC : 159-107-1396</string>
    <string name="lbl_china">China</string>
    <string name="lbl_touch_id">Touch ID</string>
    <string name="msg_if_anyone_sent2">If anyone sent you money request</string>
    <string name="msg_send_notificati">Send notification to your number</string>
    <string name="lbl_60_00">$60.00</string>
    <string name="lbl_add_card_one">Add card#One</string>
    <string name="lbl_20">20</string>
    <string name="lbl_korea">Korea</string>
    <string name="lbl_phone_here">Phone Here</string>
    <string name="lbl_new_contact">New Contact</string>
    <string name="lbl_23">23</string>
    <string name="lbl_21">21</string>
    <string name="lbl_22">22</string>
    <string name="lbl_add_new_bill">Add New Bill</string>
    <string name="lbl_onboarding">Onboarding</string>
    <string name="lbl_3_567_12">$3,567.12</string>
    <string name="lbl_30_11_2020">30/11/2020</string>
    <string name="lbl_500">$500</string>
    <string name="lbl_your_cards">Your Cards</string>
    <string name="lbl_balance">Balance</string>
    <string name="lbl_ammount">Ammount</string>
    <string name="lbl_log_in">Log In</string>
    <string name="lbl_transaction">Transaction</string>
    <string name="lbl_3_41_pm">3:41 pm</string>
    <string name="lbl_receive_money">Receive
Money</string>
    <string name="lbl_mahi">Mahi</string>
    <string name="lbl_money_trasfer">Money Trasfer</string>
    <string name="msg_online_digita2">Online &amp; Digital </string>
    <string name="lbl_2_00">$2.00</string>
    <string name="lbl_business">Business</string>
    <string name="lbl_send">send</string>
    <string name="lbl_17">17</string>
    <string name="lbl_18">18</string>
    <string name="lbl_card_activation">Card Activation</string>
    <string name="lbl_19">19</string>
    <string name="lbl_recharge_mobile">Recharge Mobile</string>
    <string name="lbl_save">SAVE</string>
    <string name="lbl_add_person">Add Person</string>
    <string name="lbl_app_information">App Information</string>
    <string name="lbl_1_41_pm">1:41 pm</string>
    <string name="lbl_25_jan">25 Jan</string>
    <string name="lbl_prepaid_to">Prepaid To</string>
    <string name="lbl_share_app">Share App</string>
    <string name="msg_1222_3443_9881">1222 3443 9881 1222</string>
    <string name="lbl_success">Success</string>
    <string name="msg_money_sent_succ">Money Sent Successfully </string>
    <string name="msg_enter_your_deta">Enter Your Detail Below</string>
    <string name="msg_let_s_get_start">Let\u2019s Get Started</string>
    <string name="msg_send_money_en">Send Money - Enter Password</string>
    <string name="lbl_december">December</string>
    <string name="lbl_159_107_1365">159-107-1365</string>
    <string name="lbl_france">France</string>
    <string name="msg_mobile_prepaid3">Mobile Prepaid#Four</string>
    <string name="lbl_mobile_prepaid">Mobile
Prepaid</string>
    <string name="msg_mobile_prepaid2">Mobile Prepaid#Three</string>
    <string name="lbl_30_12_2020">30/12/2020</string>
    <string name="lbl_recent">Recent </string>
    <string name="lbl_welcome_back">Welcome Back!</string>
    <string name="msg_recharge_succes">Recharge Success</string>
    <string name="msg_select_a_accoun">Select a account to send money to other account</string>
    <string name="msg_electric_bill_o">Electric Bill#One</string>
    <string name="lbl_brusly">Brusly</string>
    <string name="msg_if_any_new_upda">If any new update come</string>
    <string name="lbl_adom">Adom</string>
    <string name="lbl_usa">USA</string>
    <string name="lbl_usd">USD</string>
    <string name="lbl_november">November</string>
    <string name="lbl_exchange_rate">Exchange Rate</string>
    <string name="msg_notifications_s">Notifications Settings</string>
    <string name="lbl_all_contact">All Contact</string>
    <string name="lbl_1_746">1.746</string>
    <string name="lbl_phone">Phone</string>
    <string name="lbl_home">Home</string>
    <string name="lbl_select_card">Select Card</string>
    <string name="lbl_first_name">First Name</string>
    <string name="lbl_country">Country</string>
    <string name="lbl_afghanistan">Afghanistan</string>
    <string name="lbl_log_in_two">Log In#Two</string>
    <string name="lbl_card_details">Card Details</string>
    <string name="lbl_all_time">All time</string>
    <string name="lbl_history2">History </string>
    <string name="msg_enter_ammount_y">Enter ammount you want to send</string>
    <string name="msg_number_notifica">Number Notification</string>
    <string name="lbl_sign_in">Sign In</string>
    <string name="lbl_pay_bill">Pay Bill</string>
    <string name="lbl_splash">Splash</string>
    <string name="lbl_15_00">-$15.00</string>
    <string name="lbl_notifications">Notifications</string>
    <string name="lbl_card">Card</string>
    <string name="lbl_hello">Hello!</string>
    <string name="lbl_user_name2">User Name</string>
    <string name="lbl_belgeman">Belgeman</string>
    <string name="lbl_bank_to_bank2">Bank to Bank</string>
    <string name="lbl_send2">SEND</string>
    <string name="lbl_cash_in">Cash In</string>
    <string name="lbl_wed">Wed</string>
    <string name="lbl_edit_profile">Edit Profile</string>
    <string name="msg_enter_your_acco2">Enter Your Account Password To Send</string>
    <string name="lbl_support">Support</string>
    <string name="msg_enter_the_ammou">Enter The Ammount</string>
    <string name="msg_money_exchange">Money Exchange#One</string>
    <string name="lbl_10_00">-$10.00</string>
    <string name="lbl_name_or_number">Name or Number</string>
    <string name="msg_bank_to_bank_on">Bank To bank#One</string>
    <string name="lbl_govt_paybills">Govt.paybills</string>
    <string name="lbl_name_here">Name Here</string>
    <string name="lbl_currency">Currency</string>
    <string name="lbl_activity">Activity</string>
    <string name="lbl_income">Income</string>
    <string name="lbl_languages">Languages</string>
    <string name="lbl_otp">OTP</string>
    <string name="lbl_pending">Pending</string>
    <string name="lbl_vat">Vat</string>
    <string name="lbl_electric_fee">Electric Fee</string>
    <string name="lbl_your_email_here">Your Email Here</string>
    <string name="lbl_send_otp">SEND OTP</string>
    <string name="lbl_30_01_2021">30/01/2021</string>
    <string name="lbl_total_balance">Total Balance</string>
    <string name="lbl_paid">Paid</string>
    <string name="lbl_banking">Banking</string>
    <string name="lbl_fri">Fri</string>
    <string name="msg_if_any_cash_in">If any cash in your card</string>
    <string name="msg_save_my_card_de">Save My Card Details</string>
    <string name="lbl_log_in_one">Log In#One</string>
    <string name="lbl_manage_account">Manage Account</string>
    <string name="lbl_add_card">Add Card</string>
    <string name="lbl_mon">Mon</string>
    <string name="msg_bil_payment_suc">Bil Payment Success</string>
    <string name="lbl_send_money2">Send money</string>
    <string name="lbl_adom_shafi">Adom Shafi</string>
    <string name="lbl_send_money3">Send Money</string>
    <string name="lbl_limit">Limit</string>
    <string name="lbl_tue">Tue</string>
    <string name="citizen">Are you a senior citizen</string>
</resources>