<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#113317"
    tools:context="Invest_fragment">

    <!--<LinearLayout
        android:layout_width="405dp"
        android:layout_height="54dp"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/margin"
        android:layout_marginEnd="@dimen/margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constrai ntStart_toStartOf="parent">

        <ImageView
            android:id="@+id/imageView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding"
            app:srcCompat="@drawable/ic_baseline_arrow_back_24" />

        <ImageView
            android:id="@+id/app_logo"
            android:layout_width="65dp"
            android:layout_height="53dp"
            android:layout_marginLeft="18dp"
            app:srcCompat="@drawable/logo"
            tools:layout_editor_absoluteX="41dp"
            tools:layout_editor_absoluteY="16dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:orientation="vertical">


            <TextView
                android:id="@+id/textView15"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/app_nameHead"
                android:textSize="@dimen/medium_size"
                android:textStyle="bold"
                />


            <TextView
                android:id="@+id/textView16"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="fixed Deposit" />

        </LinearLayout>
    </LinearLayout>-->
    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:layout_marginTop="180dp"
        android:background="@color/white_100"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <TextView
            android:id="@+id/showcase_btn"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:gravity="center"
            android:text="Continue"
            android:textStyle="bold"
            android:layout_marginTop="400dp"
            android:background="@drawable/showcase_btn"
            android:textColor="@color/white_200"
            />

        <LinearLayout
            android:id="@+id/calculation_layout"
            android:layout_width="match_parent"
            android:layout_height="216dp"

            android:padding="20dp"
            android:layout_marginTop="280dp"
            android:background="@color/white"
            android:orientation="vertical"
            android:visibility="gone">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="170dp"
                    android:layout_height="50dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView19"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="Interest Rate"
                        android:textColor="@color/black" />

                    <TextView
                        android:id="@+id/textView20"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="6.2% p.a."
                        android:textColor="@color/black"
                        android:textSize="20dp"
                        android:textStyle="bold" />

                </LinearLayout>

                <TextView
                    android:layout_width="1dp"
                    android:layout_height="50dp"
                    android:background="@color/grey"
                    android:textColor="@color/black" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dp"
                    android:orientation="vertical">


                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="Maturity Amount"
                        android:textColor="@color/black" />


                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="1,06,200"
                        android:textColor="@color/black"
                        android:textSize="20dp"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="10dp"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"

                            android:gravity="center"
                            android:text="1,06,200"
                            android:textColor="@color/black" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text=" assured returns"
                            android:textColor="@color/black" />

                    </LinearLayout>

                </LinearLayout>


            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="42dp"
                android:gravity="center"
                android:text="Continue"
                android:textStyle="bold"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:textColor="@color/white"
                android:background="@drawable/button_enable"

                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/dis"
                android:textColor="@color/light_black"
                android:textSize="12dp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/duration_layout"
            android:layout_width="match_parent"
            android:layout_height="227dp"
            android:layout_marginTop="280dp"
            android:background="@color/white"
            android:orientation="vertical"
            android:padding="20dp"
            android:visibility="visible">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:gravity="center"
                android:text="@string/deposit_tenure"
                android:textColor="@color/black"
                android:textSize="16dp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:gravity="center"
                android:text="year"
                android:textColor="@color/black"
                android:textSize="16dp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/y_1r"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:background="@drawable/yearbtn"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="1"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/yr_2"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"

                    android:layout_marginLeft="10dp"
                    android:background="@drawable/yearbtn"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="2"
                    android:textColor="@color/black" />


                <TextView
                    android:id="@+id/yr_3"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"

                    android:layout_marginLeft="10dp"
                    android:background="@drawable/yearbtn"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="3"
                    android:textColor="@color/black" />


                <TextView
                    android:id="@+id/yr_4"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"

                    android:layout_marginLeft="10dp"
                    android:background="@drawable/yearbtn"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="4"
                    android:textColor="@color/black" />


                <TextView
                    android:id="@+id/yr_5"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"

                    android:layout_marginLeft="10dp"
                    android:background="@drawable/yearbtn"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="5 "
                    android:textColor="@color/black" />

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="Or, enter tenure in months"
                android:textColor="@color/light_black"
                android:textSize="15dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="71dp"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/yr"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:hint="Enter in month"
                        android:inputType="phone"
                        android:textColorHint="@color/grey" />


                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"

                        android:text="@string/max_yrs"
                        android:textColor="@color/light_black"
                        android:textSize="12dp" />


                </LinearLayout>

                <TextView
                    android:id="@+id/duration_btn"
                    android:layout_width="132dp"
                    android:layout_height="37dp"
                    android:layout_marginLeft="40dp"
                    android:background="@drawable/button_enable"
                    android:gravity="center"
                    android:text="Continue"
                    android:textColor="@color/white"
                    android:textStyle="bold" />
            </LinearLayout>


        </LinearLayout>


    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/relativeLayout2"
        android:layout_width="380dp"
        android:layout_height="371dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="61dp"
        android:background="@drawable/round_corner"
        android:padding="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="278dp"
            android:orientation="vertical">


            <TextView
                android:id="@+id/textView10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="Make a fixed deposit"
                android:textColor="@color/black"
                android:textSize="15dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="Deposit Amount"
                android:textColor="#454545"
                android:textSize="12dp" />

            <EditText
                android:id="@+id/editTextTextPersonName2"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"

                android:gravity="center"
                android:hint="Enter Amount in Rupees"
                android:inputType="phone"
                android:minHeight="48dp"
                android:textColor="@color/black"
                android:textColorHint="@color/light_black"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="Enter amount between rs.15,000 to rs.1cr"
                android:textColor="#979494"
                android:textSize="13dp" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="57dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:layout_marginTop="16dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView17"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Deposit Tenure"
                        android:textColor="@color/purple_700"
                        android:textSize="13dp" />


                    <TextView
                        android:id="@+id/textView18"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="MIN. 1yr,Max, 5yrs"
                        android:textColor="#979494"
                        android:textSize="10dp" />
                </LinearLayout>

                <TextView
                    android:id="@+id/deposit"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:drawableEnd="@drawable/ic_baseline_keyboard_arrow_down_24"
                    android:gravity="center"
                    android:hint="@string/duration"
                    android:inputType="textPersonName"
                    android:textColor="@color/teal_700"
                    android:textColorHint="@color/black"
                    android:textSize="15dp" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:orientation="horizontal"
                android:padding="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="Intrest Payout"
                    android:textColor="#474646"
                    android:textSize="13dp" />

                <TextView
                    android:id="@+id/tp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableEnd="@drawable/ic_baseline_keyboard_arrow_down_24"
                    android:gravity="center"
                    android:text="On Maturity"
                    android:textColor="@color/black"
                    android:textSize="15dp"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/citizen"
                    android:textColor="#605E5E"
                    android:textSize="13dp" />

                <Switch
                    android:id="@+id/switch1"
                    android:layout_width="161dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:text="Switch" />


            </LinearLayout>



        </LinearLayout>

    </RelativeLayout>



</androidx.constraintlayout.widget.ConstraintLayout>